Fix some letter spacing

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ body {
     color: white;
     font-size: 65px;
     font-weight: bold; 
-    letter-spacing: 5px; 
+    letter-spacing: 5.5px; 
     opacity: 0; 
     transition: opacity 0.3s ease; 
     z-index: 2;
